[#5072632] Fellow edits time entry

--- a/app/views/dashboards/show.html.haml
+++ b/app/views/dashboards/show.html.haml
@@ -32,7 +32,7 @@
     Hours today:
     = current_user.hours_today.to_f.round(2)
     %table.time_entries
-      - @time_entries[0..5].each do |time_entry|
+      - @time_entries.each do |time_entry|
         %tr{:class => time_entry.is_running ? "running" : ""}
           %td
             %span.time= format_as_time(time_entry.total_length)
@@ -43,3 +43,5 @@
                 = link_to time_entry.story.name, project_path(time_entry.story.project) + "#/" + time_entry.story.id.to_s
               - if time_entry.note
                 = time_entry.note
+              = link_to "edit ›", edit_time_entry_path(time_entry), :class => "edit"
+              = link_to "destroy ›", remove_time_entry_path(time_entry), :class => "edit"
