[#5094481] Fellow views time entries for a certain day

--- a/app/views/dashboards/show.html.haml
+++ b/app/views/dashboards/show.html.haml
@@ -46,3 +46,5 @@
                   = time_entry.note
                 = link_to "edit ›", edit_time_entry_path(time_entry), :class => "edit"
                 = link_to "destroy ›", remove_time_entry_path(time_entry), :class => "edit"
+                
+      = link_to "All time entries »", time_entries_path(:day => Date.today)
