--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -568,6 +568,24 @@ table.time_entries tr.running span.time { color: #3b60c4; }
 
 table.time_entries tr td a.edit { font-size: 11px; color: #16181e; text-shadow: #fff 0 1px 0; }
 
+/* User status */
+
+.dashboard_user_status { background-color: #c0c7d0; border-bottom: 1px solid #e0e3e7; }
+
+.dashboard_user_status h3 { color: #42454c; text-shadow: #d4d8df 0 1px 0; margin-bottom: 5px; }
+
+.dashboard_user_status .avatar { width: 50px; margin-right: 15px; margin-top: 7px; }
+
+.dashboard_user_status .avatar img { width: 50px; }
+
+.dashboard_user_status .status { width: 145px; margin-left: 0; }
+
+.dashboard_user_status .time_status { margin-right: 10px; color: #737881; font-size: 11px; }
+
+.dashboard_user_status .time_status span.time { color: #fff; display: block; font-weight: bold; font-size: 13px; text-shadow: #6a7890 0 -1px 0; -webkit-border-radius: 3px; background: #708eac url(../images/time_status_background.png) repeat-x; padding: 2px 7px; }
+
+.content.time_entries { padding-top: 0; }
+
 
 
 /* @end */
