[#5094481] Fellow views time entries for a certain day

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
               - @projects.each do |project|
                 %li{:class => viewing?(project) ? "active" : ""}
                   %a{:href => project_path(project)}= project.name
-        #document
+        #document.dashboard
           = yield
         #inspector.hidden
         
