--- a/app/views/time_entries/edit.html.haml
+++ b/app/views/time_entries/edit.html.haml
@@ -5,6 +5,7 @@
     - f.inputs do
       = f.input :date
       = f.input :length
+      = f.input :note
     - f.buttons do
       %li.commit
         = f.submit 'Update'
