--- a/app/views/time_entries/index.html.haml
+++ b/app/views/time_entries/index.html.haml
@@ -17,7 +17,9 @@
 
   - @entries.each do |project, entries|
     - if project
-      %h3= project.name
+      %h3
+        = project.name
+        = "(%.2f)" % entries.inject(0) { |sum, e| sum += e.hours }
     - else
       %h3 No project
     
